src/test/deca/syntax/invalid/without_class/missing_obrace_class_declaration.deca
// Description:
//    Program with missing obrace 
//
// Result:
//    Syntax Error
//    line 10


class A 
    protected int x;

    public void increment() {
        x = x + 1;
    }  
}

{
    A a = new A();
}